--- a/test/fixtures/objectives.yml
+++ b/test/fixtures/objectives.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 1
   description: MyString
   period_value: 1
-  time_id: 1
+  tiempo: one
 
 two:
-  user_id: 1
   description: MyString
   period_value: 1
-  time_id: 1
+  tiempo: two
