--- a/test/fixtures/tiempos.yml
+++ b/test/fixtures/tiempos.yml
@@ -1,7 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-
-two:
-  name: MyString
+año:
+  name: Años
+mes:
+  name: Meses
