--- a/test/fixtures/kr_measures.yml
+++ b/test/fixtures/kr_measures.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+procentaje:
+  name: Porcentaje
 
-two:
-  name: MyString
+numero:
+  name: Numerico
