--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+usuario1:
+  name: prueba
   password: MyString
 
-two:
-  name: MyString
+usuario2:
+  name: prueba2
   password: MyString
