--- a/test/fixtures/objectives.yml
+++ b/test/fixtures/objectives.yml
@@ -1,9 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  description: MyString
+  description: descripcion
   period_value: 1
   tiempo: año
+  user: usuario1
 
 
 
