--- a/test/fixtures/group_types.yml
+++ b/test/fixtures/group_types.yml
@@ -1,3 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 empresa:  
   name: Empresa
+
+equipo:
+  name: Equipo
+
+personal:
+  name: Mio
