--- a/test/fixtures/objectives.yml
+++ b/test/fixtures/objectives.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  description: descripcion
+objective1:
+  description: soy un objetivo
   period_value: 1
   tiempo: año
   user: usuario1
